RESOLVED FIXED22334
Fix several WML problems in order to provide a first set of layout test results
https://bugs.webkit.org/show_bug.cgi?id=22334
Summary Fix several WML problems in order to provide a first set of layout test results
Nikolas Zimmermann
Reported 2008-11-18 06:56:02 PST
Some things should be fixed before adding layout test results for fast/wml: WML entity handling is not enabled <br> element not behaving correctly <p> mode attribute missing This will already fix a dozen of tests.
Attachments
1) Complete set of layout test results (76.51 KB, patch)
2008-11-18 06:58 PST, Nikolas Zimmermann
sam: review+
2) Actual patch adressing all mentioned issues (18.08 KB, patch)
2008-11-18 06:58 PST, Nikolas Zimmermann
sam: review+
Nikolas Zimmermann
Comment 1 2008-11-18 06:58:14 PST
Created attachment 25234 [details] 1) Complete set of layout test results
Nikolas Zimmermann
Comment 2 2008-11-18 06:58:44 PST
Created attachment 25235 [details] 2) Actual patch adressing all mentioned issues
Sam Weinig
Comment 3 2008-11-18 14:07:34 PST
Comment on attachment 25235 [details] 2) Actual patch adressing all mentioned issues r=me
Sam Weinig
Comment 4 2008-11-18 14:08:44 PST
Comment on attachment 25234 [details] 1) Complete set of layout test results r=me
Nikolas Zimmermann
Comment 5 2008-11-18 14:19:07 PST
Landed in r38577.
Note You need to log in before you can comment on or make changes to this bug.