Reviewed by Sam Weinig.

Fixes: https://bugs.webkit.org/show_bug.cgi?id=22334

Add WMLBRElement, correcting <br/> behaviour in WML.
Enable entity replacment for WML documents.
Handle WML specific <p> 'mode' attribute.

Generate layout tests results for fast/wml.

Tests cases that pass now:
fast/wml/br-element-in-table.wml
fast/wml/br-element-in-text.wml
fast/wml/case-sensitivity.wml
fast/wml/cdata-section.wml
fast/wml/comment.wml
fast/wml/entity.wml
fast/wml/p-align.wml
fast/wml/p-mode.wml
fast/wml/text-emphasis.wml
fast/wml/validate-dtd.wml


Canonical link: https://commits.webkit.org/30786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38577 268f45cc-cd09-0410-ab3c-d52691b4dbfc