WebCore/dom/XMLTokenizerLibxml2.cpp
@@ -954,7 +954,7 @@ void XMLTokenizer::internalSubset(const xmlChar* name, const xmlChar* externalID
     if (m_doc) {
 #if ENABLE(WML)
         String extId = toString(externalID);
-        if (m_doc->isWMLDocument()
+        if (isWMLDocument()
             && extId != "-//WAPFORUM//DTD WML 1.3//EN"
             && extId != "-//WAPFORUM//DTD WML 1.2//EN"
             && extId != "-//WAPFORUM//DTD WML 1.1//EN"
@@ -1098,7 +1098,11 @@ static xmlEntityPtr getEntityHandler(void* closure, const xmlChar* name)
     }
 
     ent = xmlGetDocEntity(ctxt->myDoc, name);
-    if (!ent && getTokenizer(closure)->isXHTMLDocument()) {
+    if (!ent && (getTokenizer(closure)->isXHTMLDocument()
+#if ENABLE(WML)
+                 || getTokenizer(closure)->isWMLDocument()
+#endif
+       )) {
         ent = getXHTMLEntity(name);
         if (ent)
             ent->etype = XML_INTERNAL_GENERAL_ENTITY;
