WebCore/wml/WMLPElement.h
@@ -36,6 +36,11 @@ public:
 
     virtual bool mapToEntry(const QualifiedName&, MappedAttributeEntry&) const;
     virtual void parseMappedAttribute(MappedAttribute*);
+
+    virtual void insertedIntoDocument();
+
+private:
+    String m_mode;
 };
 
 }
